# verp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  packages.cmake
include/: CMakeLists.txt
include/verp/: CMakeLists.txt  components.hpp  except.hpp  parser.hpp  scanner.hpp  verp  version.hpp
src/: CMakeLists.txt
src/verp/: CMakeLists.txt  main.cpp  main.hpp.in  opts.cpp  opts.hpp
src/verp.test/: CMakeLists.txt  version.test.cpp
